--- a/Applications/Android/app/src/main/res/values/strings.xml
+++ b/Applications/Android/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="right">Right</string>
     <string name="stop">STOP</string>
     <string name="temperature">Temperature</string>
-    <string name="velocityMax">Velocity: FULL</string>
-    <string name="velocityMin">Velocity: SLOW</string>
+    <string name="speedMax">Speed: FULL</string>
+    <string name="speedMin">Speed: SLOW</string>
     <string name="distance">Distance</string>
-    <string name="velocity">Velocity</string>
+    <string name="speed">Speed</string>
 </resources>
