--- a/Applications/Android/app/src/main/res/values/strings.xml
+++ b/Applications/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RC CAR CONTROLLER</string>
+    <string name="app_name">RC Car Controller</string>
     <string name="settings">Settings</string>
     <string name="LEDs">LEDs</string>
     <string name="ledsON">LED ON</string>
